--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.3",
+    "@vee-validate/rules": "^4.7.3",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "pinia": "^2.0.23",
     "tw-elements": "^1.0.0-alpha12",
-    "vee-validate": "^4.7.2",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
