--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vee-validate/i18n": "^4.7.3",
     "@vee-validate/rules": "^4.7.3",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "mitt": "^3.0.0",
     "pinia": "^2.0.23",
     "tw-elements": "^1.0.0-alpha12",
